@@ -58,9 +58,9 @@ application/pdf
 	short_list_component_iids_for_novice_user_level=OAFIID:gpdf_component:892f2727-e2ec-423c-91ad-6f7b75fec6c8
 	short_list_component_iids_for_intermediate_user_level=OAFIID:gpdf_component:892f2727-e2ec-423c-91ad-6f7b75fec6c8
 	short_list_component_iids_for_advanced_user_level=OAFIID:gpdf_component:892f2727-e2ec-423c-91ad-6f7b75fec6c8
-	short_list_application_ids_for_novice_user_level=acroread,xpdf,ggv,gv
-	short_list_application_ids_for_intermediate_user_level=acroread,xpdf,ggv,gv
-	short_list_application_ids_for_advanced_user_level=acroread,xpdf,ggv,gv
+	short_list_application_ids_for_novice_user_level=acroread,gpdf,xpdf,ggv,gv
+	short_list_application_ids_for_intermediate_user_level=acroread,gpdf,xpdf,ggv,gv
+	short_list_application_ids_for_advanced_user_level=acroread,gpdf,xpdf,ggv,gv
 	_category=Documents/Published Materials
 	use_category_default=yes
 
